# redstar

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
redstar/: datasets.py  metrics.py  model.py  parsers.py  pipeline.py  processors.py  prompt.py  types.py  utils.py
redstar/tasks/: __init__.py  gsm8k.py  task.py
redstar/tasks/fixtures/: gsm8k_hardest.json  gsm8k_hardest_cot.json  gsm8k_zero_shot.txt
scripts/: eval.py  run.py
